--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="socials-header">
         <div class="container">
 
-            <span>"Primus Semper Aurora" (Always First At Dawn)</span>
+            <span class="motto">"Primus Semper Aurora" (Always First At Dawn)</span>
             <span class="social-icons">
                 <i class="social-icon fa-brands fa-facebook"></i>
                 <i class="social-icon fa-brands fa-instagram"></i>
@@ -67,13 +67,16 @@
             <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">The School</a>
+            <a class="nav-link" href="#programs">Programs</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Programs</a>
+            <a class="nav-link" href="#news">News</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#footer">Contact</a>
         </li>
     </nav>
 
@@ -98,13 +101,15 @@
     </div>
 
 
-    <div class="welcome-section">
-        <div class="image-side"></div>
+    <div class="welcome-section container">
+        <div class="image-side">
+            <div class="img-bg"></div>
+        </div>
         <div class="text-side">
             <h2>Welcome to</h2>
             <h1>Labone Senior High</h1>
 
-            <p>2021 admission is currently ongoing. Requirements are: </p>
+            <p class="p">2021 admission is currently ongoing. Requirements are: </p>
 
             <ol>
                 <li>Endorsed Placement form</li>
@@ -125,6 +130,149 @@
             </p>
         </div>
     </div>
+
+    <div id="programs" class="programs-section">
+        <h1>Our Programms</h1>
+
+
+        <div class="programs container">
+            <div class="program-card">
+                <h2 class="program-title">Business</h2>
+                <p class="program-text">
+                    Business is the activity of making one's living or making money by producing or buying and selling
+                    products (such as goods and services). Simply put, it is "any activity or enterprise entered into
+                    for profit.
+                </p>
+            </div>
+            <div class="program-card">
+                <h2 class="program-title">Home Economics</h2>
+                <p class="program-text">
+                    Home Economics is the profession and field of study that deals with the economics and management of
+                    the home and community.It prepares students for homemaking or professional careers.
+                </p>
+            </div>
+            <div class="program-card">
+                <h2 class="program-title">Visual Arts</h2>
+                <p class="program-text">
+                    The visual arts are art forms such as ceramics, drawing, painting, sculpture, printmaking, design,
+                    crafts, photography, video, filmmaking, and architecture. Many artistic disciplines involve aspects
+                    of the visual arts as well as arts of other types.
+                </p>
+            </div>
+            <div class="program-card">
+                <h2 class="program-title">General Arts</h2>
+                <p class="program-text">
+                    General arts is the generalized study of the liberal arts and sciences. These courses are sometime
+                    referred to as "classical education studies." The curriculum in general arts is on general knowledge
+                    and intellectual capacities.
+                </p>
+            </div>
+
+            <div class="program-card">
+                <h2 class="program-title">General Science</h2>
+                <p class="program-text">
+                    General science is an interdisciplinary major that gives you a grand tour of the sciences. You
+                    study biology, chemistry, computer science, physics, and mathematics.
+                </p>
+            </div>
+            <div class="program-card">
+                <h2 class="program-title">Agric Science</h2>
+                <p class="program-text">
+                    Agricultural science is a broad multidisciplinary field of biology that encompasses the parts of
+                    exact, natural, economic and social sciences that are used in the practice and understanding of
+                    agriculture.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div id="news" class="programs-section">
+        <h1>News & Activities</h1>
+
+
+        <div class="programs container">
+
+            <div id="news-card" class="program-card">
+                <div class="news-img news-img1"></div>
+                <h2 class="program-title">Labone SHS Wins International Women's Day Debate</h2>
+                <p class="program-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est aut commodi fugit sapiente
+                    voluptatibus! Sequi fugiat reiciendis similique voluptatibus in incidunt accusantium impedit eius,
+                    dolorum hic possimus, eos facilis enim.
+                </p>
+            </div>
+            <div id="news-card" class="program-card">
+                <div class="news-img news-img2"></div>
+                <h2 class="program-title">Best Labone SHS Students are Honored</h2>
+                <p class="program-text">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque rerum perspiciatis et repudiandae
+                    debitis nulla fuga doloribus, quod quibusdam! Facere soluta accusamus quo cumque doloremque ipsam
+                    inventore earum, dolore sequi!
+                </p>
+            </div>
+            <div id="news-card" class="program-card">
+                <div class="news-img news-img3"></div>
+                <h2 class="program-title">The 49th Speech and Prize Giving Day</h2>
+                <p class="program-text">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime, iure molestiae ad quis sunt
+                    expedita velit eum dicta a porro doloremque impedit vero aut. Iure qui sint dignissimos eaque
+                    repellendus.
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- Footer -->
+    <footer id="footer" class="footer">
+    
+     <div class="container footer-container">
+        <div class="about-us">
+            <p>About Us</p>
+
+            <p class="about-text">
+                In line with the core mandate of the GES, this school is committed to providing holistic education
+                through training, coaching, mentoring and inspiring students to develop their innate potentials. The
+                school is also committed to instill in our students values through quality teaching and extra-curricular
+                activities...
+            </p>
+        </div>
+
+        <div class="quick-links">
+            <p>Useful Links</p>
+            <ul>
+                <li>The School</li>
+                <li>Board of Governors</li>
+                <li>General Rules and Regulations</li>
+                <li>News & Events</li>
+            </ul>
+        </div>
+
+        <div class="contact-us">
+            <p>Contact Info</p>
+            <ul>
+                <li>
+                    <i class="fa-solid fa-id-badge footer-icon"></i>
+                    Josiah Tongoogari Link, Accra, Ghana
+                </li>
+                <li>
+                    <i class="fa-solid fa-phone footer-icon"></i>
+                    +233 540843351
+                </li>
+                <li>
+                    <i class="fa-solid fa-at footer-icon"></i>
+                    laboneshs@gmail.com
+                </li>
+            </ul>
+        </div>
+     </div>
+
+    </footer>
+
+    <footer class="dev-footer">
+        <span>&copy; Labone SHS 2022</span>
+
+    </footer>
 </body>
 
 </html>
